manifests/webhook/webhook.k8s.validating.config.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "simple-admission-controller.ashcorp.com"
webhooks:
  - name: "simple-admission-controller.ashcorp.com"
    failurePolicy: Fail
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["*"]
        operations: ["CREATE"]
        resources: ["deployments"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: simple-admission-controller
        path: /validate-deploy
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSekNDQWkrZ0F3SUJBZ0lVVGsvRXlqOUNy
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
